--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # .pre-commit-config.yaml  (top level)
 
 default_language_version:
-  python: python3.10 # or python3 if you don’t care about minor
+  python: python3
 
 repos:
   - repo: https://github.com/psf/black
